# curso_python_gis

./: .gitignore  404.html  flowchart_rev_01.ipynb  flowchart_teste.ipynb  index.html  index.md  install_mkdocs-material.py  mkdocs.yml  pyproject.toml  pyproject.toml.old  requirements.txt  sitemap.xml  teste.ipynb  teste.py  teste01.py
cientif_py/: jupyter.html  jupyter_intro.html  jupyter_intro.ipynb  matplotlib_intro.html  matplotlib_intro.ipynb  numpy.html  numpy_intro.html  plt.html  scipy.html  scipy_intro.html
cientif_py/jupyter/: index.html
cientif_py/jupyter_intro/: index.html
cientif_py/numpy/: index.html
cientif_py/plt/: index.html
cientif_py/scipy/: index.html
dados_py/: DomicilioRenda_BA.csv  dados.html  dados.md  nomes_cimatec_2024_01.csv  pandas.html  pandas_intro.html  pandas_intro.ipynb  pandas_intro_ssa.html  pandas_intro_ssa.ipynb
dados_py/pandas/: index.html
dados_py/pandas_intro/: index.html  pandas_intro.ipynb
docs/: index.md
docs/cientif_py/: jupyter.md  jupyter_intro.ipynb  matplotlib_intro.ipynb  numpy_intro.ipynb  scipy_intro.ipynb
docs/css/: extra_css.css
docs/dados_py/: DomicilioRenda_BA.csv  dados.md  nomes_cimatec_2024_01.csv  pandas_intro.ipynb  pandas_intro_ssa.ipynb
docs/geo_py/: geemap.md  geemap_intro.ipynb  geopandas.md
geo_py/: geemap.html  geemap.md  geemap_intro.html  geopandas.html  geopandas.md
intro_py/: extra_config.html  extra_config.md  instala.html  instala.md  intro_py.html  intro_py.md  variaveis_e_operadores.html
overrides/: main.html
ref/: ref.html  ref.md
search/: search_index.json
(+27 files in other folders)
