[tool.poetry]
name = "curso_python_gis"
version = "0.1.0"
description = "Curso introdutório de Python voltado para gis"
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmai.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.2.5"
seaborn = "^0.11.1"
dash = "^1.20.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.1"


[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.9"
mkdocs-jupyter = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
