[tool.poetry]
name = "curso-python-gis"
version = "0.2.0"
description = "curso de python gis"
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
pandas = "^2.2.1"
dash = "^2.16.1"
statsmodels = "^0.14.1"
qtconsole = "^5.5.1"
geemap = "^0.32.0"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
ipykernel = "^6.29.3"
jupyter-console = "^6.6.3"
nbconvert = "^7.16.3"
ipywidgets = "^8.1.2"
jupyter-core = "^5.7.2"
jupyter = "^1.0.0"
notebook = "^7.1.2"
mkdocs-jupyter = "^0.24.6"
flowgiston = "^0.1"
mknotebooks = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
